removed unnecessary images

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				      <ul class="nav navbar-nav">
 				        <li class="active"><a href="#banner">Home</a></li>
 				        <li class=""><a href="#projects">Projects</a></li>
-				        <li class=""><a href="#testimonial">Testimonial</a></li>
+				        <!--<li class=""><a href="#testimonial">Testimonial</a></li>-->
 				        <li class=""><a href="#contact">Contact</a></li>
 				      </ul>
 				    </div>
@@ -74,7 +74,7 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Front End Capstone</h4>
-							<a href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
+							<a target="_blank" href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
 							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
 								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
 								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.
@@ -86,7 +86,7 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Local Weather</h4>
-							<a href="https://github.com/justinal64/local-weather">Local Weather</a>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Local Weather</a>
 							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
 							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
 							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
@@ -122,7 +122,7 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Front End Capstone</h4>
-							<a href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
+							<a target="_blank" href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
 							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
 								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
 								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.</p>
@@ -133,7 +133,7 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Local Weather</h4>
-							<a href="https://github.com/justinal64/local-weather">Local Weather</a>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Local Weather</a>
 							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
 							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
 							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
@@ -145,7 +145,7 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Front End Capstone</h4>
-							<a href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
+							<a target="_blank" href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
 							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
 								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
 								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.</p>
@@ -250,7 +250,7 @@
 	</section>-->
 	<!--cta-->
 	<!--doctor team-->
-	<section id="doctor-team" class="section-padding">
+	<!--<section id="doctor-team" class="section-padding">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -315,10 +315,10 @@
 			    </div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!--/ doctor team-->
 	<!--testimonial-->
-	<section id="testimonial" class="section-padding">
+	<!--<section id="testimonial" class="section-padding">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -326,47 +326,47 @@
 					<hr class="botm-line">
 				</div>
 				<div class="col-md-4 col-sm-4">
-					<div class="testi-details">
+					<div class="testi-details">-->
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
-					<div class="testi-info">
+					<div class="testi-info">-->
 						<!-- User Image -->
-						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
+						<!--<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>-->
 						<!-- User Name -->
-						<h3>Alex<span>Texas</span></h3>
+						<!--<h3>Alex<span>Texas</span></h3>
 					</div>
 				</div>
 			    <div class="col-md-4 col-sm-4">
-					<div class="testi-details">
+					<div class="testi-details">-->
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
-					<div class="testi-info">
+					<div class="testi-info">-->
 						<!-- User Image -->
-						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
+						<!--<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>-->
 						<!-- User Name -->
-						<h3>Alex<span>Texas</span></h3>
+						<!--<h3>Alex<span>Texas</span></h3>
 					</div>
-				</div>
-			    <div class="col-md-4 col-sm-4">
-					<div class="testi-details">
+				</div>-->
+			    <!--<div class="col-md-4 col-sm-4">
+					<div class="testi-details">-->
 						<!-- Paragraph -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+						<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 					</div>
-					<div class="testi-info">
+					<div class="testi-info">-->
 						<!-- User Image -->
-						<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>
+						<!--<a href="#"><img src="img/thumb.png" alt="" class="img-responsive"></a>-->
 						<!-- User Name -->
-						<h3>Alex<span>Texas</span></h3>
+						<!--<h3>Alex<span>Texas</span></h3>
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+	</section>-->
 	<!--/ testimonial-->
 	<!--cta 2-->
-	<section id="cta-2" class="section-padding">
+	<!--<section id="cta-2" class="section-padding">
 		<div class="container">
 			<div class=" row">
 				<div class="col-md-2"></div>
@@ -380,7 +380,7 @@
 	            <div class="col-md-2"></div>
 	        </div>
 		</div>
-	</section>
+	</section>-->
 	<!--cta-->
 	<!--contact-->
 	<section id="contact" class="section-padding">
@@ -465,7 +465,7 @@
 						</div>
 						<div class="info-sec">
 							<ul class="social-icon">
-								<li class="bglight-blue"><i class="fa fa-facebook"></i></li>
+								<a href="https://www.fb.me/justin.leggett.12"><li class="bglight-blue"><i class="fa fa-facebook"></i></li></a>
 								<li class="bgred"><i class="fa fa-google-plus"></i></li>
 								<li class="bgdark-blue"><i class="fa fa-linkedin"></i></li>
 								<li class="bglight-blue"><i class="fa fa-twitter"></i></li>
