added 1 backed proj and 1 side project.

--- a/index.html
+++ b/index.html
@@ -72,12 +72,17 @@
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Front End Capstone</h4>
-							<a target="_blank" href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
-							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
-								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
-								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.
-								</p>
+							<h4>TheBibleApp</h4>
+							<p>
+								I struggled to get my children to listen to the bible being read to them(4 children under the age of 3), and this is the solution I came up with.
+								I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
+								the verses are read to them. With the click of a button the user can also be rerouted to an adult version of the app that uses the Digital Bible 
+								Platform API to pull back the King James version of the bible. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, Materialize, Digital Bible Platform API, and Firebase.
+							</p>
+							<div class="text-center">
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming Soon)</a></h3>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -85,12 +90,15 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Local Weather</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Local Weather</a>
 							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
 							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
 							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
 							This project combines my knowledge of CSS, HTML, Javascript, Angular 1, firebase, and I used an API for the first time.
 							</p>
+							<div class="text-center">
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming Soon)</a></h3>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -98,10 +106,12 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Checkers</h4>
-							<a target="_blank" href="http://codepen.io/justinal64/pen/mEaQYv">Play Checkers</a>
 							<p>I created this project to push the limits of what I understood about javascript. This project taught me how to add and remove event listeners 
 								based on what the user had clicked. This project combines my knowledge of CSS, HTML, and Javascript.
 							</p>
+							<div class="text-center">
+								<h3><a target="_blank" href="http://codepen.io/justinal64/pen/mEaQYv">Lets Play Checkers</a></h3>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -120,35 +130,33 @@
 					<div class="service-info">
 						<div class="icon-info">
 							<h4>Terminal Interface</h4>
-							<a target="_blank" href="https://github.com/Team-Slytherin/Bangazon-Terminal-Interface">Terminal Interface</a>
 							<p>This project was created using the <a href="https://en.wikipedia.org/wiki/Sprint_(software_development)">sprint methodology</a>. In this project 
 							I was paired up with 4 other classmates. The goal of this project was to take in input via the terminal and give the user a amazon like checkout experience. 
 							We completed this project a week early, so we decided to add extra features to the app. The features I was responsible for was validation all information 
 							the customer entered. I used C# and regex to validate all input from the user from the name to the phone number. In this project I used SQL, C#, Regex, and LINQ. 
 							</p>
+							<div class="text-center">
+								<h3><a target="_blank" href="https://github.com/Team-Slytherin/Bangazon-Terminal-Interface">See the code</a></h3>
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming Soon)</a></h3>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Local Weather</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Local Weather</a>
-							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
-							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
-							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
-							This project combines my knowledge of CSS, HTML, Javascript, Angular 1, firebase, and I used an API for the first time.</p>
+							<h4>Coming Soon</h4>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
+							<p>Coming Soon</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Front End Capstone</h4>
-							<a target="_blank" href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
-							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
-								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
-								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.</p>
+							<h4>Coming Soon</h4>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
+							<p>Coming Soon</p>
 						</div>
 					</div>
 				</div>
@@ -157,43 +165,44 @@
 			<h1><span class="headline">Side Projects</span></h1>
 			</div>
 			<div class="icon text-center">
-							<img class="tech_icon" src="./img/tech_icons/aspnet.jpeg" alt="asp.net">
-							<img class="tech_icon" src="./img/tech_icons/c.png" alt="csharp">
-							<img class="tech_icon" src="./img/tech_icons/sql.png" alt="sql">
-							<img class="tech_icon" src="./img/tech_icons/visualstudio.png" alt="visual studio">							
+							<img class="tech_icon" src="./img/tech_icons/react.png" alt="react">
+							<img class="tech_icon" src="./img/tech_icons/javascript.png" alt="javascript">
+							<img class="tech_icon" src="./img/tech_icons/jquery.png" alt="jquery">
+							<!--<img class="tech_icon" src="./img/tech_icons/visualstudio.png" alt="visual studio">	-->
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Front End Capstone</h4>
-							<a href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
-							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
-								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
-								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.</p>
+							<h4>KFLv2</h4>
+							<p>
+								This project is a rewrite of an app I wrote for android before attending NSS and 
+								it can be found here <a target="_blank" href="https://github.com/justinal64/KFL">KFL</a>. Currently I am about 1/3 
+								of the way through the project and I am loving react. I used React Native, CSS, and all the design skills I have to 
+								put this project together.
+							</p>
+							<div class="text-center">
+								<h3><a target="_blank" href="https://github.com/justinal64/KFLv2">See The Code</a></h3>
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming July 2017)</a></h3>
+							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Local Weather</h4>
-							<a href="https://github.com/justinal64/local-weather">Local Weather</a>
-							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
-							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
-							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
-							This project combines my knowledge of CSS, HTML, Javascript, Angular 1, firebase, and I used an API for the first time.</p>
+							<h4>Coming Soon</h4>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
+							<p>Coming Soon</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Front End Capstone</h4>
-							<a href="https://github.com/justinal64/TheBibleApp">TheBibleApp</a>
-							<p>I created this project to help engage children between the ages of 3 - 6. I struggle to get my children to listen to the bible being
-								read to them, and this is the solution I came up with. I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
-								the verses are read to the child. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, and Firebase.</p>
+							<h4>Coming Soon</h4>
+							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
+							<p>Coming Soon</p>
 						</div>
 					</div>
 				</div>
@@ -206,11 +215,19 @@
 	<section id="contact" class="section-padding">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<h2 class="ser-title">Contact us</h2>
-					<hr class="botm-line">
+				<div class="col-md-12 text-center">
+					<h1 class="ser-title">Lets talk</h1>
+					<!--<hr class="botm-line">-->
 				</div>
-				<div class="col-md-4 col-sm-4">
+					<div class="info-sec">
+						<ul class="social-icon">
+							<a href="https://www.fb.me/justin.leggett.12"><li class="bglight-blue"><i class="fa fa-facebook"></i></li></a>
+							<li class="bgred"><i class="fa fa-google-plus"></i></li>
+							<li class="bgdark-blue"><i class="fa fa-linkedin"></i></li>
+							<li class="bglight-blue"><i class="fa fa-twitter"></i></li>
+						</ul>
+					</div>
+				<!--<div class="col-md-4 col-sm-4">
 			      <h3>Contact Info</h3>
 			      <div class="space"></div>
 			      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>321 Awesome Street<br>
@@ -219,14 +236,14 @@
 			      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@companyname.com</p>
 			      <div class="space"></div>
 			      <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>+1 800 123 1234</p>
-			    </div>
-				<div class="col-md-8 col-sm-8 marb20">
-					<div class="contact-info">
+			    </div>-->
+				<!--<div class="col-md-8 col-sm-8 marb20">-->
+					<!--<div class="contact-info">
 							<h3 class="cnt-ttl">Having Any Query! Or Book an appointment</h3>
-							<div class="space"></div>
-                            <div id="sendmessage">Your message has been sent. Thank you!</div>
-                            <div id="errormessage"></div>
-							<form action="" method="post" role="form" class="contactForm">
+							<div class="space"></div>-->
+                            <!--<div id="sendmessage">Your message has been sent. Thank you!</div>
+                            <div id="errormessage"></div>-->
+							<!--<form action="" method="post" role="form" class="contactForm">
 							    <div class="form-group">
                                     <input type="text" name="name" class="form-control br-radius-zero" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                                     <div class="validation"></div>
@@ -247,15 +264,15 @@
 								<div class="form-action">
 									<button type="submit" class="btn btn-form">Send Message</button>
 								</div>
-							</form>
-					</div>
-				</div>
+							</form>-->
+					<!--</div>-->
+				<!--</div>-->
 			</div>
 		</div>
 	</section>
 	<!--/ contact-->
 	<!--footer-->
-	<footer id="footer">
+	<!--<footer id="footer">
 		<div class="top-footer">
 			<div class="container">
 				<div class="row">
@@ -297,7 +314,7 @@
 		</div>
 		<div class="footer-line">
 			<div class="container">
-				<div class="row">
+				<div class="row">-->
 					<!--<div class="col-md-12 text-center">
 						© Copyright Medilab Theme. All Rights Reserved
                         <div class="credits">-->
@@ -310,10 +327,10 @@
                             <!--Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                         </div>
 					</div>-->
-				</div>
+				<!--</div>
 			</div>
 		</div>
-	</footer>
+	</footer>-->
 	<!--/ footer-->
     
     <script src="js/jquery.min.js"></script>
