moved links to github repos

--- a/index.html
+++ b/index.html
@@ -71,46 +71,45 @@
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>TheBibleApp</h4>
+							<h3>TheBibleApp</h3>
+							<div class="">
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
+							</div>
 							<p>
 								I struggled to get my children to listen to the bible being read to them(4 children under the age of 3), and this is the solution I came up with.
 								I use simple animations(using<a href="https://docs.angularjs.org/api/ngAnimate"> ng-animate</a>) to hold the childs attention while 
 								the verses are read to them. With the click of a button the user can also be rerouted to an adult version of the app that uses the Digital Bible 
 								Platform API to pull back the King James version of the bible. This project combines my knowledge of CSS, HTML, Javascript, Angular 1, Materialize, Digital Bible Platform API, and Firebase.
 							</p>
-							<div class="text-center">
+							<!--<div class="text-center">
 								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
 								<h3>Use the App(Coming Soon)</h3>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Local Weather</h4>
+							<h3>Local Weather</h3>
+								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
+							
 							<p>I created this project to fetch weather conditions from the <a href="https://openweathermap.org/">openweather api</a>.
 							I would then allow the user to choose a date and location and I would display the weather conditions for that location. I also used firebase to
 							register a user and login, so the user could come back to the website at any time and see what search they have completed in the past. 
 							This project combines my knowledge of CSS, HTML, Javascript, Angular 1, firebase, and I used an API for the first time.
 							</p>
-							<div class="text-center">
-								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">See the code</a></h3>
-								<h3>Use the App(Coming Soon)</h3>
-							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Checkers</h4>
+							<h3>Checkers</h3>
+								<h3><a target="_blank" href="http://codepen.io/justinal64/pen/mEaQYv">Use the App</a></h3>							
 							<p>I created this project to push the limits of what I understood about javascript. This project taught me how to add and remove event listeners 
 								based on what the user had clicked. This project combines my knowledge of CSS, HTML, and Javascript.
 							</p>
-							<div class="text-center">
-								<h3><a target="_blank" href="http://codepen.io/justinal64/pen/mEaQYv">Use the App</a></h3>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -128,34 +127,29 @@
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Terminal Interface</h4>
+							<h3>Terminal Interface</h3>
+							<h3><a target="_blank" href="https://github.com/Team-Slytherin/Bangazon-Terminal-Interface">See the code</a></h3>
 							<p>This project was created using the <a href="https://en.wikipedia.org/wiki/Sprint_(software_development)">sprint methodology</a>. In this project 
 							I was paired up with 4 other classmates. The goal of this project was to take in input via the terminal and give the user a amazon like checkout experience. 
 							We completed this project a week early, so we decided to add extra features to the app. The features I was responsible for was validation all information 
 							the customer entered. I used C# and regex to validate all input from the user from the name to the phone number. In this project I used SQL, C#, Regex, and LINQ. 
 							</p>
-							<div class="text-center">
-								<h3><a target="_blank" href="https://github.com/Team-Slytherin/Bangazon-Terminal-Interface">See the code</a></h3>
-								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming Soon)</a></h3>
-							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Coming Soon</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
-							<p>Coming Soon</p>
+							<h3>Coming Soon</h3>
+							<p>Code Coming Soon</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Coming Soon</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
-							<p>Coming Soon</p>
+							<h3>Coming Soon</h3>
+							<p>Code Coming Soon</p>
 						</div>
 					</div>
 				</div>
@@ -172,35 +166,35 @@
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>KFLv2</h4>
+							<h3>KFLv2</h3>
+							<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming July 2017)</a></h3>
 							<p>
 								This project is a rewrite of an app I wrote for android before attending NSS and 
 								it can be found here <a target="_blank" href="https://github.com/justinal64/KFL">KFL</a>. Currently I am about 1/3 
-								of the way through the project and I am loving react. I used React Native, CSS, and all the design skills I have to 
+								of the way through the project and I am loving react-native. I used React Native, CSS, and all the design skills I have to 
 								put this project together.
 							</p>
-							<div class="text-center">
-								<h3><a target="_blank" href="https://github.com/justinal64/KFLv2">See The Code</a></h3>
-								<h3><a target="_blank" href="https://github.com/justinal64/TheBibleApp">Use the App(Coming July 2017)</a></h3>
-							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Coming Soon</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
-							<p>Coming Soon</p>
+							<h3>Porfolio Website</h3>
+							<h3><a target="_blank" href="https://github.com/justinal64/portfolio-site">See The Code</a></h3>							
+							<p>
+								This is the code for my portfolio website. I used bootstrap, css, flexbox, and javascript to create 
+								this website.
+							</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4">
 					<div class="service-info">
 						<div class="icon-info">
-							<h4>Coming Soon</h4>
-							<a target="_blank" href="https://github.com/justinal64/local-weather">Coming Soon</a>
-							<p>Coming Soon</p>
+							<h3>Coming Soon</h3>
+							<!--<h3><a target="_blank" href="https://github.com/justinal64/portfolio-site">See The Code</a></h3>							-->
+							<p>Code Coming Soon</p>
 						</div>
 					</div>
 				</div>
