--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio Website</title>
-
+	<link rel="icon" href="./img/icon.ico">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Candal">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" type="text/css" href="css/font-mfizz.css">
+	<link rel="stylesheet" type="text/css" href="css/font-mfizz.css">
   </head>
   <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
   	<!--banner-->
